2009-02-22  Zoltan Varga  <vargaz@gmail.com>

	* threads.c (mono_thread_suspend_all_other_threads): Handle the case when
	the a thread does not suspend within 100ms.

	* monitor.c (mono_monitor_try_enter_internal): Handle SuspendRequested
	in addition to StopRequested as well.

	* mono-debug.c: Call _mono_debug_get_image () while holding the debug lock.

	* debug-mono-symfile.c (mono_debug_symfile_lookup_method): Actually
	search the method_hash before inserting a new entry, to avoid crashes when
	the same method is inserted multiple times, causing the old 
	MonoDebugMethodInfo structure to be freed by the value dtor function.

2009-04-15  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.c
	(mono_debug_symfile_lookup_location): Don't print a warning for
	unknown extended opcodes if they're within 0x40 and 0x7f.

2009-03-31 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* socket-io.c: don't fail if the SocketOptionsFlag has Partial or
	* MaxIOVectorLength enabled, just ignore them.
	Fixes bug #349688.

2009-01-26  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_load_type_info): Fill out info->min_align.
	(mono_class_native_size): Use klass->marshal_info->min_align instead of
	klass->min_align, since klass->min_align contains the managed alignment,
	while the native alignment can be different, like for longs on x86.
	Fixes #469135.

	* class-internals.h (MonoMarshalType): Add a min_align field.

2009-03-27 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* appdomain.c:
	* console-io.[ch]: added new mono_console_init() to make sure that
	file descriptors 0, 1 and 2 are opened.
	Bug #489019 fixed.

2009-03-26  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_marshal_object): Generate code to throw an exception
	instead of throwing it. Fixes #488670.

2009-03-23  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_delegate_to_ftnptr): For delegates wrapping pinvoke
	methods, return the native function address itself. Fixes
	#487758.
